# Physics_tournament

./: README.md
Frijoles/Cmake_project/: CMakeLists.txt  Vector.cpp  cilindro.cpp  cilindro.h  colisionador.cpp  colisionador.h  constantes.h  cuerpo.cpp  cuerpo.h  frijoles.cpp
Frijoles/Compilation/: CMakeCache.txt  Makefile  cmake_install.cmake
Frijoles/build-Cmake_project-Desktop-Default/: CMakeCache.txt  Cmake_project.cbp  Makefile  cmake_install.cmake
Ping-Pong/: Granos2D_2019II_EnClase.cpp  Vector.h  colisionador.cpp  datos.ods  retro_datos.csv
Ping-Pong/Cmake_project/: CMakeLists.txt  colisionador.h  constantes.h  cuerpo.h  fluido_pelotas.cpp
Ping-Pong/Cmake_project/Compilation/: CMakeCache.txt  Makefile  cmake_install.cmake
